--- a/src/main/resources/templates/admin/user/user.html
+++ b/src/main/resources/templates/admin/user/user.html
@@ -61,7 +61,7 @@
             <h3>Staff</h3>
             <table class="table">
                 <thead>
-                <a href="#" class="btn btn-primary">Add user 11</a>
+                <a href="#" class="btn btn-primary">Add user</a>
                 <tr>
                     <th scope="col">#</th>
                     <th scope="col">Name</th>
